--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@atproto/api": "^0.18.17",
 		"@atproto/oauth-client-browser": "^0.3.39",
-		"gsap": "^3.14.2"
+		"gsap": "^3.14.2",
+		"svelte-confetti": "^2.3.2"
 	}
 }
